# CppBrownBelt

./: README.md  test_runner.h
10_lazy_project/src/: lazy_value.cpp
11_synchronized/src/: synchronized_2.cpp
12_concurent_map/: CMakeLists.txt
12_concurent_map/src/: concurrent_map_2.cpp
13_polynomial/: polynomial.cpp
14_pool_objects/: object_pool.cpp
15_zoo/: zoo.cpp
16_pipline/: pipeline.cpp
17_Expression_Tree/: main.cpp
18_textures/: Solution.cpp  main.cpp
19_cache/: Solution.cpp  main.cpp
1_hash_table/: CMakeLists.txt
1_hash_table/src/: hash_set.cpp
20_unique_ptr/: unique_ptr.cpp
21_Booking/: booking.h  new_booking_providers.h
22_demographic_2/: main.cpp  stuff.h
23_EBook/: slow.cpp
24_expresses/: slow.cpp
25_task_trecker/: main.cpp
26_domains/: domains_bad_wa.cpp
27_test_domains/: test_domains.cpp
28_budget_home_desktop/: main.cpp
29_budget_mobile/: budget_good_base.cpp
2_iterator/: CMakeLists.txt
2_iterator/src/: iterator.cpp
30_budget_mobile_bad_base/: budget_bad_base.cpp
30_final_A/: main.cpp
31_final_E_json/: bus_catalog.cpp  bus_catalog.h  json.cpp  json.h  main.cpp  requests.cpp  requests.h  test_runner.h  tests.cpp  tests.h  utils.cpp  utils.h
31_final_E_json/working_dir/: .read_test.swp  input  read_test
3_hash_persone/: CMakeLists.txt
3_hash_persone/src/: hash_person.cpp
4_secondary_index/: CMakeLists.txt
4_secondary_index/src/: secondary_index.cpp
5_ini_reader/: CMakeLists.txt
5_ini_reader/src/: ini.cpp  ini.h  test_ini.cpp
6_stats_aggregator/: CMakeLists.txt
6_stats_aggregator/src/: main.cpp  stats_aggregator.cpp  stats_aggregator.h
7_collide_geo/: CMakeLists.txt
7_collide_geo/src/: collide.cpp
8_comment_server/: CMakeLists.txt
8_comment_server/src/: comment_server.cpp
empty_progect/: CMakeLists.txt
(+1 files in other folders)
